<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/green"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="64sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/layout_rounded_shape_button_background"
                android:drawableStart="@drawable/ic_user_green"
                android:drawablePadding="16dp"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_rounded_shape_button_background"
                android:drawableStart="@drawable/ic_password_green"
                android:drawablePadding="16dp"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:background="@drawable/layout_rounded_shape_button_background"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.08"
                    android:gravity="center"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_database_green" />

                <Spinner
                    android:id="@+id/spDatabase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.92"
                    android:backgroundTint="@color/white" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/ckRem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLogin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/layout_rounded_shape_green"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@null" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>