<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="16dp"
    android:paddingEnd="8dp"
    tools:context=".TopFragment">

    <TextView
        android:id="@+id/tv_fragment_top_title"
        style="@style/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_tab_01_header"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_fragment_top_sup_01_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/top_tab_01_sub_header_01"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_fragment_top_sub_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="358"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_fragment_top_sup_01_label" />

        <TextView
            android:id="@+id/tv_fragment_top_sub_02_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/top_tab_01_sub_header_02"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_fragment_top_sub_02" />

        <TextView
            android:id="@+id/tv_fragment_top_sub_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="433"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_fragment_top_sub_02_02" />

        <TextView
            android:id="@+id/tv_fragment_top_sub_02_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(+75)"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/progress_indicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="24dp">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barchart_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>